--- a/index.html
+++ b/index.html
@@ -38,6 +38,17 @@
 
         <div v-else>
             <h2>Checkout</h2>
+            <p>
+                <strong>First Name:</strong>
+                <input v-model="order.firstName"/>
+            </p>
+            <p>
+                <strong>Last Name:</strong>
+                <input v-model="order.lastName">
+            </p>
+            <h2>Order Information</h2>
+            <p>First Name: {{order.firstName}}</p>
+            <p>Last Name: {{order.lastName}}</p>
         </div>
     </main>
         </div>
@@ -59,6 +70,10 @@
                 },
                 cart: [],
                 showProduct: true,
+                order: {
+                    firstName: '',
+                    lastName: '',
+                }
             },
             methods: {
                 addToCart: function() {
