--- a/index.html
+++ b/index.html
@@ -46,9 +46,39 @@
                 <strong>Last Name:</strong>
                 <input v-model="order.lastName">
             </p>
+
+            <p>
+                <strong>Address</strong>
+            </p>
+            <input v-model="order.address">
+
+            <p>
+                <strong>City:</strong>
+                <input v-model="order.city">
+            </p>
+
+            <p>
+                <strong>State:</strong>
+                <select v-model="order.state">
+                    <option disabled value="State"></option>
+                    <option>AL</option>
+                    <option>AR</option>
+                    <option>CA</option>
+                    <option>NV</option>
+                </select>
+            </p>
+
+            <p>
+                <strong>Zip/Postal Code:</strong>
+                <input v-model="order.zip">
+            </p>
             <h2>Order Information</h2>
             <p>First Name: {{order.firstName}}</p>
             <p>Last Name: {{order.lastName}}</p>
+            <p>Address: {{order.address}}</p>
+            <p>City: {{order.city}}</p>
+            <p>Zip: {{order.zip}}</p>
+            <p>State: {{order.state}}</p>
         </div>
     </main>
         </div>
@@ -73,6 +103,9 @@
                 order: {
                     firstName: '',
                     lastName: '',
+                    address: '',
+                    zip: '',
+                    state: '',
                 }
             },
             methods: {
