--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <h2>Checkout</h2>
             <p>
                 <strong>First Name:</strong>
-                <input v-model="order.firstName"/>
+                <input v-model.trim="order.firstName"/>
             </p>
             <p>
                 <strong>Last Name:</strong>
-                <input v-model="order.lastName">
+                <input v-model.trim="order.lastName">
             </p>
 
             <p>
@@ -60,17 +60,31 @@
             <p>
                 <strong>State:</strong>
                 <select v-model="order.state">
-                    <option disabled value="State"></option>
-                    <option>AL</option>
-                    <option>AR</option>
-                    <option>CA</option>
-                    <option>NV</option>
+                    <option disabled value="">State</option>
+                    <option v-for="(state, key) in states"
+                    v-bind:value="state">
+                    {{key}}
+                </option>
                 </select>
             </p>
 
             <p>
                 <strong>Zip/Postal Code:</strong>
-                <input v-model="order.zip">
+                <input v-model.number="order.zip" type="number">
+            </p>
+
+            <p>
+                <input type="checkbox" name="gift" vlaue="true" v-model="order.gift"
+                v-bind:true-value="order.sendGift"
+                v-bind:false-value="order.dontSendGift">
+                <label for="gift">Ship as Gift?</label>
+            </p>
+
+            <p>
+                <input type="radio" id="home" value="Home" v-model="order.method">
+                <label for="home">Home</label>
+                <input type="radio" id="business" value="Business" v-model="order.method">
+                <label for="business">Business</label>
             </p>
             <h2>Order Information</h2>
             <p>First Name: {{order.firstName}}</p>
@@ -79,6 +93,18 @@
             <p>City: {{order.city}}</p>
             <p>Zip: {{order.zip}}</p>
             <p>State: {{order.state}}</p>
+            <p>{{order.gift}}</p>
+            <p>{{order.method}}</p>
+
+            <p>
+                <ol>
+                    <li v-for="state in states">{{state}}</li>
+                </ol>
+            </p>
+
+            <p>
+                <button v-on:click="submitForm">Place Order</button>
+            </p>
         </div>
     </main>
         </div>
@@ -106,7 +132,18 @@
                     address: '',
                     zip: '',
                     state: '',
-                }
+                    gift: 'Send as a Gift',
+                    sendGift: 'Send as a Gift',
+                    dontSendGift: 'Dont send as Gift',
+                    method: 'Home',
+                },
+                states: {
+                        AL: 'Alabama',
+                        AR: 'Arizona',
+                        CA: 'California',
+                        NV: 'Nevada'
+                    }
+                
             },
             methods: {
                 addToCart: function() {
@@ -116,6 +153,9 @@
                 showCheckout() {
                     this.showProduct = this.showProduct ? false : true; 
                 },
+                submitForm() {
+                    alert("Order Subitted!")
+                }
             },
             computed: {
                  cartItemCount: function(){
